# Tradex

./: .gitignore
trading-app/: .env.local.example  package-lock.json  package.json  vercel.json
trading-app/app/: globals.css  layout.tsx  page.tsx
trading-app/app/api/cron/daily-picks/: route.ts
trading-app/app/api/notify/telegram/: route.ts
trading-app/app/api/trading/ai-decisions/: route.ts
trading-app/app/api/trading/bot/: route.ts
trading-app/app/api/trading/journal/: route.ts
trading-app/app/api/trading/performance/: route.ts
trading-app/app/api/trading/rules/: route.ts
trading-app/app/api/trading/trades/: route.ts
trading-app/app/api/trading/wallet/: route.ts
trading-app/app/insights/: page.tsx
trading-app/app/investments/: page.tsx
trading-app/app/trading/journal/: page.tsx
trading-app/app/trading/settings/: page.tsx
trading-app/lib/: supabase.ts
trading-bot/: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt
trading-bot/api/: server.py
trading-bot/config/: constants.py  settings.py
trading-bot/core/: ai_signals.py  alerts.py  dhan_broker.py  engine.py  forecast.py  indicators.py  learning.py  openalgo_client.py  risk_manager.py  strategy.py  telegram_bot.py  wallet.py  weekly_portfolio.py
trading-bot/db/: client.py
trading-bot/db/migrations/: 001_trading_tables.sql
trading-bot/migrations/: 001_weekly_portfolio.sql
trading-bot/scripts/: run_bot.py
