[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Automated micro-trading system for Indian stock markets"
requires-python = ">=3.11"
dependencies = [
    # Trading & Broker
    "dhanhq>=2.0",
    # AI Decision Engine
    "tradingagents>=0.1.0",
    # Technical Analysis
    "pandas-ta>=0.3.14b1",
    "pandas>=2.0",
    # Database
    "supabase>=2.0",
    # API Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # HTTP Client
    "httpx>=0.27",
    # Scheduling
    "apscheduler>=3.10",
    # Configuration
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    # Utilities
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["config*", "core*", "api*", "db*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
